//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  picture String
  firstName String [not null]
  lastName String
  role UserRole [not null, default: 'USER']
  isActive Boolean [not null, default: true]
  sessions UserSession [not null]
  sequences Sequence [not null]
}

Table UserSession {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accessToken String [not null]
  provider AuthProvider [not null, default: 'GOOGLE']
  providerId String [unique, not null]
  providerEmail String [not null]
  refreshToken String [not null]
  expirationTime DateTime [not null]
  user User [not null]
  userId String [not null]
}

Table Sequence {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  status SequenceStatus [not null, default: 'ACTIVE']
  type SequenceType [not null, default: 'SOURCING']
  lastActivity DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
  recipients Contact [not null]
  stages SequenceStage [not null]
  activities SequenceActivity [not null]
  sequenceTags SequenceTags [not null]
  queue SequenceQueue [not null]
}

Table SequenceTags {
  id String [pk]
  name String [unique, not null]
  sequences Sequence [not null]
  userId String [not null]
}

Table SequenceStage {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type StageType [not null, default: 'EMAIL']
  order Int [not null, default: 1]
  scheduledFor String [not null, default: 'now']
  asReply Boolean [not null, default: true]
  emailFrom String [not null]
  emailCc String [not null]
  emailSubject String [not null]
  emailBody String [not null]
  sequence Sequence [not null]
  sequenceId String [not null]
}

Table SequenceQueue {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type StageType [not null, default: 'EMAIL']
  order Int [not null, default: 1]
  scheduledFor String [not null, default: 'now']
  asReply Boolean [not null, default: true]
  emailFrom String [not null]
  emailCc String [not null]
  emailSubject String [not null]
  emailBody String [not null]
  sequence Sequence [not null]
  sequenceId String [not null]
  contactId String [not null]
}

Table SequenceActivity {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  sequence Sequence [not null]
  sequenceId String [not null]
  contactId String [not null]
  contactStatus ContactInSequenceStatus [not null, default: 'ACTIVE']
  currentStage Int [not null]
  type ActivityType [not null]
}

Table Contact {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String [not null]
  lastName String
  company String
  title String
  location String
  resume String
  userId String [not null]
  emails String[] [not null]
  profiles String[] [not null]
  type OutreachMethod [not null, default: 'MANUAL']
  sequences Sequence [not null]
  tags ContactTags [not null]
  lists ContactLists [not null]
}

Table ContactTags {
  id String [pk]
  name String [unique, not null]
  contacts Contact [not null]
  userId String [not null]
}

Table ContactLists {
  id String [pk]
  name String [not null]
  contacts Contact [not null]
}

Table ContactToSequence {
  recipientsId String [ref: > Contact.id]
  sequencesId String [ref: > Sequence.id]
}

Table SequenceToSequenceTags {
  sequencetagsId String [ref: > SequenceTags.id]
  sequencesId String [ref: > Sequence.id]
}

Table ContactToContactTags {
  tagsId String [ref: > ContactTags.id]
  contactsId String [ref: > Contact.id]
}

Table ContactToContactLists {
  listsId String [ref: > ContactLists.id]
  contactsId String [ref: > Contact.id]
}

Enum AuthProvider {
  GOOGLE
}

Enum UserRole {
  USER
  PROMO
  MANAGER
  ADMIN
}

Enum SequenceStatus {
  ACTIVE
  PAUSED
  ARCHIVED
}

Enum SequenceType {
  SOURCING
  EVENT
  NURTURE
}

Enum StageType {
  EMAIL
  INMAIL
  SMS
  PHONE
}

Enum ActivityType {
  OPENED
  REPLIED
  SENT
}

Enum OutreachMethod {
  MANUAL
  LINKEDIN
}

Enum ContactInSequenceStatus {
  UNSUBSCRIBED
  FINISHED
  ACTIVE
  PAUSED
  BOUNCED
}

Ref: UserSession.userId > User.id [delete: Cascade]

Ref: Sequence.userId > User.id [delete: Cascade]

Ref: SequenceStage.sequenceId > Sequence.id [delete: Cascade]

Ref: SequenceQueue.sequenceId > Sequence.id [delete: Cascade]

Ref: SequenceActivity.sequenceId > Sequence.id [delete: Cascade]